# dontoffice

./: .gitignore  README.md  REQUISITOS.md  db.py  docker-compose.yaml  docker-compose.yml  main.py  requirements.txt
.github/workflows/: azure-static-web-apps-agreeable-sand-04f0e440f.yml  azure-static-web-apps-jolly-mud-0de359b0f.yml  dontoffice-api-pipeline.yml  dontoffice-app-pipeline.yml  master_dontoffice-api.yml  master_dontoffice.yml
api/: pyproject.toml
api/src/api/: main.py
app/: .dockerignore  .gitignore  Dockerfile  README.md  cypress.config.ts  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
app/cypress/components/shared/: DefaultDontofficeLogo.cy.tsx
app/cypress/e2e/dontppt/: create.cy.ts
app/cypress/support/: component.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: SlideRenderer.tsx
app/src/components/shared/: DefaultDontofficeLogo.tsx  DragAndDropFileUploadInput.tsx  SlugInput.tsx
app/src/pages/ppt/: create.tsx  viewpage.tsx
app/src/routes/: __root.tsx
app/src/routes/ppt/: $slug.tsx  index.tsx
app/src/service/: shared.ts
app/src/service/ppt/: route.api.ts
app/src/usecases/ppt/: create-route.ts  view-route.ts  view-slide-file.ts
app/src/utils/: pptxParser.ts
controllers/: FileController.py  UrlsController.py
models/: FileModel.py  UrlsModel.py
server/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
server/api/: __init__.py
server/dontoffice/: asgi.py  settings.py  urls.py  wsgi.py
server/dontoffice/ppt/: apps.py  models.py  permissions.py  serializers.py  views.py
server/dontoffice/ppt/migrations/: 0001_initial.py  0002_alter_pptroute_table.py  0003_alter_pptroute_table.py  0004_alter_pptroute_table.py  0005_pptroute_created_at_pptroute_updated_at.py
specs/: Introdução.md
specs/.obsidian/: workspace.json
specs/dontppt/: Introdução.md  Manual de Identidade Visual.md
specs/estudos/: Escala Tipográfica.md
sql/: atualizar-arquivo.sql  atualizar-url.sql  buscar-todas-url.sql  buscar-url.sql  create-table-url.sql  deletar-url.sql  inserir-arquivo.sql  inserir-url.sql
static/: style.css
views/: home.html  not-found-secret-page.html  secret_page.html
