[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "diaszin",email = "84644190+diaszin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[tool.poetry.scripts]
app = "src.api.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
