[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    { name = "diaszin", email = "84644190+diaszin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.138.1,<0.139.0)"]

[tool.poetry.scripts]
app = 'main:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
