[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    { name = "diaszin", email = "84644190+diaszin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["uvicorn (>=0.49.0,<0.50.0)", "gunicorn (>=26.0.0,<27.0.0)", "sqlmodel (>=0.0.39,<0.0.40)", "python-multipart (>=0.0.32,<0.0.33)", "pymssql (>=2.3.13,<3.0.0)", "pyodbc (>=5.3.0,<6.0.0)", "taskipy (>=1.14.1,<2.0.0)", "ruff (>=0.15.21,<0.16.0)", "djangorestframework (>=3.17.1,<4.0.0)", "markdown (>=3.10.2,<4.0.0)", "django-filter (>=26.1,<27.0)", "mssql-django (>=1.7.3,<2.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "django (>=6.0.7,<7.0.0)", "filetype (>=1.2.0,<2.0.0)", "django-cors-headers (>=4.9.0,<5.0.0)", "djangorestframework-stubs (>=3.17.0,<4.0.0)", "django-stubs (>=6.0.7,<7.0.0)"]

[tool.ruff]
line-length = 100
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'double'


[tool.typos.files]
extend-exclude = ['*.md']

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'poetry run python manage.py runserver'
migrate = "docker compose exec backend python manage.py migrate"
manage = "docker compose exec backend python manage.py"



[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"